rewrite-bash/src/main/java/org/openrewrite/bash/internal/grammar/BashParser.java
/*
 * Copyright 2026 the original author or authors.
 * <p>
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p>
 * https://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from /Users/kevin/conductor/workspaces/moderne-product-management/tripoli/working-set-bash-parser/rewrite/rewrite-bash/src/main/antlr/BashParser.g4 by ANTLR 4.13.2
package org.openrewrite.bash.internal.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class BashParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SHEBANG=1, LINE_CONTINUATION=2, NEWLINE=3, COMMENT=4, IF=5, THEN=6, ELSE=7, 
		ELIF=8, FI=9, FOR=10, WHILE=11, UNTIL=12, DO=13, DONE=14, CASE=15, ESAC=16, 
		IN=17, FUNCTION=18, SELECT=19, COPROC=20, TIME=21, DOUBLE_LBRACKET=22, 
		DOUBLE_RBRACKET=23, DOUBLE_LPAREN=24, DOUBLE_RPAREN=25, DOLLAR_DPAREN=26, 
		DOLLAR_LPAREN=27, DOLLAR_LBRACE=28, HERESTRING=29, DLESSDASH=30, DLESS=31, 
		DGREAT=32, LESSAND=33, GREATAND=34, LESSGREAT=35, CLOBBER=36, PROC_SUBST_IN=37, 
		PROC_SUBST_OUT=38, LESS=39, GREAT=40, AND=41, OR=42, PIPE_AND=43, PIPE=44, 
		DSEMI_AND=45, DSEMI=46, SEMI_AND=47, SEMI=48, AMP=49, PLUS_EQUALS=50, 
		EQUALS=51, LPAREN=52, RPAREN=53, LBRACE=54, RBRACE=55, LBRACKET=56, RBRACKET=57, 
		BANG=58, COLON=59, BACKTICK=60, SPECIAL_VAR=61, DOLLAR_NAME=62, DOLLAR_SINGLE_QUOTED=63, 
		SINGLE_QUOTED_STRING=64, DOUBLE_QUOTE=65, NUMBER=66, WORD=67, DOLLAR=68, 
		STAR=69, QUESTION=70, TILDE=71, WS=72, ANY_CHAR=73, DQ_ESCAPE=74, DQ_TEXT=75, 
		BE_COLON_DASH=76, BE_COLON_EQUALS=77, BE_COLON_PLUS=78, BE_COLON_QUEST=79, 
		BE_DHASH=80, BE_HASH=81, BE_DPERCENT=82, BE_PERCENT=83, BE_DSLASH=84, 
		BE_SLASH=85, BE_DCARET=86, BE_CARET=87, BE_DCOMMA=88, BE_COMMA=89, BE_AT=90, 
		BE_STAR=91, BE_BANG=92, BE_COLON=93, BE_LBRACKET=94, BE_RBRACKET=95, BE_NAME=96, 
		BE_NUMBER=97, BE_TEXT=98, BT_CONTENT=99;
	public static final int
		RULE_program = 0, RULE_shebang = 1, RULE_completeCommands = 2, RULE_completeCommand = 3, 
		RULE_list = 4, RULE_listSeparator = 5, RULE_andOr = 6, RULE_pipeline = 7, 
		RULE_bangOpt = 8, RULE_timeOpt = 9, RULE_pipeSequence = 10, RULE_pipeOp = 11, 
		RULE_command = 12, RULE_simpleCommand = 13, RULE_cmdPrefix = 14, RULE_cmdWord = 15, 
		RULE_cmdSuffix = 16, RULE_compoundCommand = 17, RULE_braceGroup = 18, 
		RULE_subshell = 19, RULE_compoundList = 20, RULE_ifClause = 21, RULE_elifClause = 22, 
		RULE_elseClause = 23, RULE_forClause = 24, RULE_forBody = 25, RULE_inClause = 26, 
		RULE_cStyleForClause = 27, RULE_whileClause = 28, RULE_untilClause = 29, 
		RULE_doGroup = 30, RULE_selectClause = 31, RULE_caseClause = 32, RULE_caseItem = 33, 
		RULE_caseSeparator = 34, RULE_pattern = 35, RULE_doubleParenExpr = 36, 
		RULE_arithmeticExpr = 37, RULE_arithmeticPart = 38, RULE_doubleBracketExpr = 39, 
		RULE_conditionExpr = 40, RULE_conditionPart = 41, RULE_functionDefinition = 42, 
		RULE_functionParens = 43, RULE_functionBody = 44, RULE_assignment = 45, 
		RULE_assignmentValue = 46, RULE_arrayElements = 47, RULE_redirectionList = 48, 
		RULE_redirection = 49, RULE_redirectionOp = 50, RULE_heredoc = 51, RULE_heredocDelimiter = 52, 
		RULE_heredocBody = 53, RULE_heredocLine = 54, RULE_word = 55, RULE_wordPart = 56, 
		RULE_doubleQuotedString = 57, RULE_doubleQuotedPart = 58, RULE_commandSubstitution = 59, 
		RULE_commandSubstitutionContent = 60, RULE_backtickContent = 61, RULE_arithmeticSubstitution = 62, 
		RULE_processSubstitution = 63, RULE_braceExpansionContent = 64, RULE_braceExpansionPart = 65, 
		RULE_separator = 66, RULE_sequentialSep = 67, RULE_newlineList = 68, RULE_linebreak = 69;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "shebang", "completeCommands", "completeCommand", "list", 
			"listSeparator", "andOr", "pipeline", "bangOpt", "timeOpt", "pipeSequence", 
			"pipeOp", "command", "simpleCommand", "cmdPrefix", "cmdWord", "cmdSuffix", 
			"compoundCommand", "braceGroup", "subshell", "compoundList", "ifClause", 
			"elifClause", "elseClause", "forClause", "forBody", "inClause", "cStyleForClause", 
			"whileClause", "untilClause", "doGroup", "selectClause", "caseClause", 
			"caseItem", "caseSeparator", "pattern", "doubleParenExpr", "arithmeticExpr", 
			"arithmeticPart", "doubleBracketExpr", "conditionExpr", "conditionPart", 
			"functionDefinition", "functionParens", "functionBody", "assignment", 
			"assignmentValue", "arrayElements", "redirectionList", "redirection", 
			"redirectionOp", "heredoc", "heredocDelimiter", "heredocBody", "heredocLine", 
			"word", "wordPart", "doubleQuotedString", "doubleQuotedPart", "commandSubstitution", 
			"commandSubstitutionContent", "backtickContent", "arithmeticSubstitution", 
			"processSubstitution", "braceExpansionContent", "braceExpansionPart", 
			"separator", "sequentialSep", "newlineList", "linebreak"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'if'", "'then'", "'else'", "'elif'", "'fi'", 
			"'for'", "'while'", "'until'", "'do'", "'done'", "'case'", "'esac'", 
			"'in'", "'function'", "'select'", "'coproc'", "'time'", "'[['", "']]'", 
			"'(('", null, null, "'$('", "'${'", "'<<<'", "'<<-'", "'<<'", "'>>'", 
			"'<&'", "'>&'", "'<>'", "'>|'", "'<('", "'>('", "'<'", "'>'", "'&&'", 
			"'||'", "'|&'", "'|'", "';;&'", "';;'", "';&'", "';'", "'&'", "'+='", 
			"'='", "'('", "')'", "'{'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'?'", "'~'", null, null, 
			null, null, "':-'", "':='", "':+'", "':?'", "'##'", "'#'", "'%%'", "'%'", 
			"'//'", "'/'", "'^^'", "'^'", "',,'", "','", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SHEBANG", "LINE_CONTINUATION", "NEWLINE", "COMMENT", "IF", "THEN", 
			"ELSE", "ELIF", "FI", "FOR", "WHILE", "UNTIL", "DO", "DONE", "CASE", 
			"ESAC", "IN", "FUNCTION", "SELECT", "COPROC", "TIME", "DOUBLE_LBRACKET", 
			"DOUBLE_RBRACKET", "DOUBLE_LPAREN", "DOUBLE_RPAREN", "DOLLAR_DPAREN", 
			"DOLLAR_LPAREN", "DOLLAR_LBRACE", "HERESTRING", "DLESSDASH", "DLESS", 
			"DGREAT", "LESSAND", "GREATAND", "LESSGREAT", "CLOBBER", "PROC_SUBST_IN", 
			"PROC_SUBST_OUT", "LESS", "GREAT", "AND", "OR", "PIPE_AND", "PIPE", "DSEMI_AND", 
			"DSEMI", "SEMI_AND", "SEMI", "AMP", "PLUS_EQUALS", "EQUALS", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "BANG", "COLON", 
			"BACKTICK", "SPECIAL_VAR", "DOLLAR_NAME", "DOLLAR_SINGLE_QUOTED", "SINGLE_QUOTED_STRING", 
			"DOUBLE_QUOTE", "NUMBER", "WORD", "DOLLAR", "STAR", "QUESTION", "TILDE", 
			"WS", "ANY_CHAR", "DQ_ESCAPE", "DQ_TEXT", "BE_COLON_DASH", "BE_COLON_EQUALS", 
			"BE_COLON_PLUS", "BE_COLON_QUEST", "BE_DHASH", "BE_HASH", "BE_DPERCENT", 
			"BE_PERCENT", "BE_DSLASH", "BE_SLASH", "BE_DCARET", "BE_CARET", "BE_DCOMMA", 
			"BE_COMMA", "BE_AT", "BE_STAR", "BE_BANG", "BE_COLON", "BE_LBRACKET", 
			"BE_RBRACKET", "BE_NAME", "BE_NUMBER", "BE_TEXT", "BT_CONTENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BashParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private boolean noWhitespaceBefore() {
	        Token prev = _input.LT(-1);
	        Token next = _input.LT(1);
	        if (prev == null || next == null) return false;
	        int gapStart = prev.getStopIndex() + 1;
	        int gapEnd = next.getStartIndex();
	        if (gapStart >= gapEnd) return true;
	        CharStream input = _input.getTokenSource().getInputStream();
	        String gap = input.getText(new org.antlr.v4.runtime.misc.Interval(gapStart, gapEnd - 1));
	        for (int i = 0; i < gap.length(); i++) {
	            char c = gap.charAt(i);
	            if (c == ' ' || c == '\t') return false;
	        }
	        return true;
	    }

	public BashParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<LinebreakContext> linebreak() {
			return getRuleContexts(LinebreakContext.class);
		}
		public LinebreakContext linebreak(int i) {
			return getRuleContext(LinebreakContext.class,i);
		}
		public TerminalNode EOF() { return getToken(BashParser.EOF, 0); }
		public ShebangContext shebang() {
			return getRuleContext(ShebangContext.class,0);
		}
		public CompleteCommandsContext completeCommands() {
			return getRuleContext(CompleteCommandsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BashParserVisitor ) return ((BashParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SHEBANG) {
				{
				setState(140);
				shebang();
				}
			}

			setState(143);
			linebreak();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -46159697199235104L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 255L) != 0)) {
				{
				setState(144);
				completeCommands();
				}
			}

			setState(147);
			linebreak();
			setState(148);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShebangContext extends ParserRuleContext {
		public TerminalNode SHEBANG() { return getToken(BashParser.SHEBANG, 0); }
		public LinebreakContext linebreak() {
			return getRuleContext(LinebreakContext.class,0);
		}
		public ShebangContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shebang; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).enterShebang(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).exitShebang(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BashParserVisitor ) return ((BashParserVisitor<? extends T>)visitor).visitShebang(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShebangContext shebang() throws RecognitionException {
		ShebangContext _localctx = new ShebangContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_shebang);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(SHEBANG);
			setState(151);
			linebreak();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompleteCommandsContext extends ParserRuleContext {
		public List<CompleteCommandContext> completeCommand() {
			return getRuleContexts(CompleteCommandContext.class);
		}
		public CompleteCommandContext completeCommand(int i) {
			return getRuleContext(CompleteCommandContext.class,i);
		}
		public List<NewlineListContext> newlineList() {
			return getRuleContexts(NewlineListContext.class);
		}
		public NewlineListContext newlineList(int i) {
			return getRuleContext(NewlineListContext.class,i);
		}
		public CompleteCommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_completeCommands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).enterCompleteCommands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).exitCompleteCommands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BashParserVisitor ) return ((BashParserVisitor<? extends T>)visitor).visitCompleteCommands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompleteCommandsContext completeCommands() throws RecognitionException {
		CompleteCommandsContext _localctx = new CompleteCommandsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_completeCommands);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			completeCommand();
			setState(159);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(154);
					newlineList();
					setState(155);
					completeCommand();
					}
					} 
				}
				setState(161);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompleteCommandContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public SeparatorContext separator() {
			return getRuleContext(SeparatorContext.class,0);
		}
		public CompleteCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_completeCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).enterCompleteCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).exitCompleteCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BashParserVisitor ) return ((BashParserVisitor<? extends T>)visitor).visitCompleteCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompleteCommandContext completeCommand() throws RecognitionException {
		CompleteCommandContext _localctx = new CompleteCommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_completeCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			list();
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI || _la==AMP) {
				{
				setState(163);
				separator();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public List<AndOrContext> andOr() {
			return getRuleContexts(AndOrContext.class);
		}
		public AndOrContext andOr(int i) {
			return getRuleContext(AndOrContext.class,i);
		}
		public List<ListSeparatorContext> listSeparator() {
			return getRuleContexts(ListSeparatorContext.class);
		}
		public ListSeparatorContext listSeparator(int i) {
			return getRuleContext(ListSeparatorContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BashParserListener ) ((BashParserListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BashParserVisitor ) return ((BashParserVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			andOr();
			setState(172);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(167);
					listSeparator();
					setState(168);
					andOr();
					}
					} 
				}
				setState(174);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
